--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,9 @@
   command = "npm run build"
   publish = "dist"
 
+  [dev]
+  functions = "netlify/functions"
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
